# Codeinsight

./: .dockerignore  .env.example  .gitignore  .prettierignore  .vercelignore  ABOUT.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEMO.md  LICENSE  Makefile  PRODUCT_SPEC.md  README.md  SECURITY.md  SYSTEM_PROMPT.md  TASKS.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start_backend.sh  tsconfig.base.json  vercel.json
backend/: README.md  __init__.py
docker/: README.md  backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docs/: README.md  architecture-diagrams.md  demo-repository.md  production-release.md
frontend/: README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
graph/: README.md  __init__.py  call_graph.py  dependency_graph.py  fallback_repository.py  knowledge_graph.py  neo4j_repository.py  networkx_repository.py  persistent_repository.py  sqlite_repository.py
parser/: README.md  __init__.py  tree_sitter_parser.py
scripts/: check_python_coverage.py
shared/: README.md
tests/: README.md  __init__.py  test_architecture_docs.py  test_architecture_explanation.py  test_architecture_review.py  test_architecture_violations.py  test_backend_config.py  test_backend_health.py  test_bug_impact.py  test_call_graph.py  test_circular_dependencies.py  test_conversation_memory.py  test_dead_code.py  test_dependency_graph.py  test_developer_onboarding.py  test_docker_compose.py  test_embedding_service.py  (+28 more)
(+121 files in other folders)
