[project]
name = "codeinsight"
version = "0.1.0"
description = "Google Maps for Software Systems."
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend", "workers", "graph", "parser", "shared", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "RUF",
  "UP",
  "W"
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ["\\.venv", "venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
